http/style/main.css
/* ... */
/* Popups */
#dark {
	display: none;
	position: fixed;
	top: 0; bottom: 0;
	left: 0; right: 0;
	background: black;
	opacity: 0;
	z-index: 500;
	transition: opacity ease 500ms;
}
body.app #dark {
	top: 56px;
}
#dark.visible {
	opacity: 0.6;
}

#popups {
	position: fixed;
	z-index: 1000;
}

#popups:not(.box) {
	display: none;
}

.popup-wrapper {
	position: fixed;
	top: 0; bottom: 0;
	left: 0; right: 0;
	width: 100%;
	height: 100%;
	text-align: center;
}

.popup {
	display: none;
	width: 700px;
	box-shadow: 0px 0px 50px #111;
	-webkit-transition: height ease 0.3s;
	-moz-transition: height ease 0.3s;
	transition: height ease 0.3s;
	margin-bottom: 50px;
	text-align: left;
}

.popup.draggable {
	position: fixed;
	z-index: 600;
	top: 0;
	left: 0;
}

.popup > .title {
	background-image: url('../image/background.png');
	color: #eee;
	font-weight: 300;
	padding: 0 10px;
	padding-top: 6px;
	padding-bottom: 4px;
	height: 30px;
	font-size: 23px;
	text-align: left;

	-webkit-border-top-left-radius: 3px;
	-moz-border-radius-topleft: 3px;
	border-top-left-radius: 3px;
	-webkit-border-top-right-radius: 3px;
	-moz-border-radius-topright: 3px;
	border-top-right-radius: 3px;
}
.popup .title .options {
	display: flex;
	float: right;
	cursor: pointer;
	margin-top: -6px;
	margin-bottom: -4px;
	margin-right: -10px;
}
.popup .title .options .option {
	background: black;
	height: 26px;
	width: 26px;
	padding: 7px;
}
.popup .title .options .option:hover {
	background-image: linear-gradient(to bottom, rgba(110, 201, 31, 0.7) 0%, rgba(110, 201, 31, 0.9) 50%, rgba(110, 201, 31, 0.7) 100%);
}
.popup .title .options .option img {
	width: 26px;
	height: 26px;
}
.popup.draggable .title {
	cursor: move;
}

.popup .content {
	background: rgba(240,240,240, 0.95);
	padding: 15px;
	overflow-y: auto;
	overflow-x: hidden;
}

.popup.no-actions .content {
	-webkit-border-bottom-left-radius: 3px;
	-moz-border-radius-bottomleft: 3px;
	border-bottom-left-radius: 3px;
	-webkit-border-bottom-right-radius: 3px;
	-moz-border-radius-bottomright: 3px;
	border-bottom-right-radius: 3px;
}

.popup .actions {
	height: 40px;
	font-weight: 300;
	display: flex;
}

.popup .actions div {
	cursor: pointer;
	display: inline-block;
	background: #555;
	color: #eee;
	width: 100%;
	height: 40px;
	text-align: center;
	line-height: 40px;
	font-size: 20px;
}
.popup .actions div:not(:last-child)  {
	border-right: 1px solid #777;
}
.popup .actions div:hover {
	background: #777;
}
.popup .actions div.red {
	background: #c00;
}
.popup .actions div.red:hover {
	background: #e00;
}
.popup .actions div.green {
	background: #5FAD1B;
}
.popup .actions div.green:hover {
	background: #73D120;
}

/* Inputs */
input {
	font-family: "Roboto";
}

input[type='text'],
input[type='number'],
input[type='password'],
textarea
{
	border:solid 1px #ddd;
	font-size: 15px;
	min-height: 26px;
	padding: 0 4px;
	outline: 0;
}

input:active, input:focus {
	outline: none;
}

/* Tooltips */
#tooltips {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	z-index: 1000;
}

.tooltip {
	display: none;
	position: absolute;
	background: rgba(0,0,0, 0.7);
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	padding: 3px 4px;
	color: white;
	max-width: 180px;
	font-size: 16px;
	word-wrap: break-word;
}

.tooltip.fluid {
	max-width: none;
}

.tooltip .arrow {
	position: absolute;
	top: -7px;
	left: 50%;
	margin-left: -7px;

	width: 0;
	height: 0;
	border-left: 7px solid transparent;
	border-right: 7px solid transparent;
	border-bottom: 7px solid rgba(0,0,0, 0.7);
}

.tooltip.top .arrow {
	position: absolute;
	top: auto;
	bottom: -7px;
	border-bottom: none;
	border-top: 7px solid rgba(0,0,0, 0.7);
}

.tooltip h2 {
	color: white;
}

/*
 * Toasts
 */
#toasts {
	position: fixed;
	left: 0;
	right: 0;
	z-index: 1000;
	bottom: 100px;
	text-align: center;

	pointer-events: none;

	transition: all 0.6s;
	-webkit-transition: all 0.6s ease-in-out;
}

.toast-wrapper {

	position: relative;

	-webkit-perspective: 350px;
    perspective: 350px;

	transition: all 0.6s;
	-webkit-transition: all 0.6s ease-in-out;
	-moz-transition: all 0.6s;

	-webkit-transform: scale(0.5,0.5) rotateX(150deg); /* Safari */
    transform: scale(0.5,0.5) rotateX(90deg);
	opacity: 0;
	height: 0;

	top: 40px;
}

.toast {
	padding: 4px 8px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	font-weight: 300;
	font-size: 18px;
	font-family: "Roboto", sans-serif;
	background: rgba(0,0,0, 0.7);
	color: white;
	display: inline-block;
}

.toast-wrapper.visible {
	-webkit-transform: scale(1,1) rotateX(0deg);
	transform: scale(1,1) rotateX(0deg);
	opacity: 1;
	top: 0;
	height: 36px;
}

.link {
	cursor: pointer;
	color: #555;
}

.link:hover {
	color: #111;
}

.small {
	font-size: 12px;
}

.smiley {
	display: inline-block;
	vertical-align: middle;
	margin-top: -2px;
	width: 16px;
	height: 16px;
	float: none;
}

.smiley.large {
	width: 32px;
	height: 32px;
	margin-top: 4px;
}

/*
 * Fight history
 */
.fight-history {
	display: flex;
	flex-wrap: wrap;
	padding: 5px;
}

.fight-history .fight-wrapper {
	flex-grow: 1;
	min-width: 50%;
}

.fight-history .fight {
	margin: 5px;
	color: #333;
	text-align: center;
	border-radius: 3px;
	font-size: 15px;
	height: 42px;
	white-space: nowrap;
	background: white;
}

.fight-history .fighters {
	height: 42px;
	margin: 0 auto;
}

.fight-history .fight.win {
	background-color: #B6F182;
}
.fight-history .fight.draw {
	background-color: #DCDCDC;
}
.fight-history .fight.defeat {
	background-color: #FFB3AE;
}
.fight-history .fight.generating {
	background-color: white;
}

.fight-history .fight .center {
	display: inline-block;
	background: #555;
	width: 36px;
	height: 42px;
	margin-left: -4px;
}

.fight-history .fight .center img {
	width: 22px;
	height: 22px;
	margin: 10px 6px;
}
/* ... */

